src/oblig2patch/src/tests/oblig2/errors/wrong_log_exp_type_fail.cmp
program wrong_log_exp_type_fail
begin

    /* Arguments of a logical operator not of type bool. */
    proc main()
    begin
        var b : bool
    in
        b := false || 4;
        b := 5 && true
    end
end